<resources>
    <string name="app_name">FastBanking</string>
    <string name="title_activity_main">Main</string>

    <!--Register-->
    <string name="title_activity_register">Inregistrare</string>
    <string name="username_hint">Nume utilizator</string>
    <string name="password_hint">Parola</string>
    <string name="phone_hint">Numar de telefon</string>
    <string name="register_success">Utilizatorul a fost adaugat cu success</string>
    <string name="register_error">Nu ati completat toate campurile</string>
    <string name="admin_user">Administrator</string>

    <!--Login-->
    <string name="title_activity_login">Autentificare</string>
    <string name="login_error">Utilizator sau parola gresite</string>

    <!--Add bank-->
    <string name="title_add_bank">Adaugare Banca</string>
    <string name="bank_name">Denumire</string>
    <string name="counters_number">Numar ghisee</string>
    <string name="wait_time">Timp mediu de asteptare (min)</string>
    <string name="total_people">Numar total de persoane</string>
    <string name="total_travel_time">Timp pana la destinatie</string>
    <string name="total_wait_time">Timp de asteptare la coada</string>
    <string name="total_time">Timp total</string>
    <string name="btn_add">Adaugare</string>
    <string name="btn_cancel">Anulare</string>
    <string name="btn_ok">OK</string>
    <string name="btn_navigate">Navigheaza</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="aproximate_time_remaining">Timp aproximativ ramas: %s</string>
    <string name="remaining_distance">Distanta ramasa: %s</string>
    <string name="update_info">Actualizare informatii in: %s sec</string>
    <string name="stop_navigation">Opreste navigarea</string>

</resources>
