<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/nav_bar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:background="#88FFFFFF"
              android:orientation="vertical"
              android:visibility="gone"
    >


    <TextView
        android:id="@+id/tv_time_remaining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/aproximate_time_remaining"/>

    <TextView
        android:id="@+id/tv_distance_remaining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remaining_distance"/>

    <TextView
        android:id="@+id/tv_update_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/update_info"/>


    <Button
        android:id="@+id/btn_stop_navigation"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/stop_navigation"
        />


</LinearLayout>