<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_title_size"
        android:background="@drawable/title_background_green_light"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:id="@+id/bank_name"
        />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingTop="20dp"
      android:paddingBottom="10dp"
      android:layout_gravity="center"
      android:gravity="center">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/counters_number"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:id="@+id/bank_counters_number_text"
       />

      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.2"
          android:text="-"
          android:gravity="left"
          android:layout_marginRight="10dp"
          android:id="@+id/bank_counters_number"
          />

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/wait_time"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/bank_wait_time_text"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="-"
            android:gravity="left"
            android:layout_marginRight="10dp"
            android:id="@+id/bank_wait_time"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/total_people"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/bank_total_people_text"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="-"
            android:gravity="left"
            android:layout_marginRight="10dp"
            android:id="@+id/bank_total_people"
            />

    </LinearLayout>



</LinearLayout>